# black-diamond-engine

./: CMakeLists.txt  blender_config.xml  config.xml  config2 copy.xml  config2.xml  config2_back.adb
black-diamond-engine/: aggregate.cpp  aggregate.h  bbox.cpp  bbox.h  bde.cpp  bdesettings.cpp  bdesettings.h  black_diamond_engine.1  brdf.cpp  brdf.h  brdfmerl.cpp  brdfmerl.h  camera.cpp  camera.h  image.cpp  image.h  kdtreeaccel.cpp  kdtreeaccel.h  light.cpp  light.h  light_source.cpp  light_source.h  material.cpp  material.h  matrix4x4.cpp  matrix4x4.h  memoryarena.cpp  memoryarena.h  montecarlo.cpp  montecarlo.h  parser.cpp  parser.h  point.h  pointlight.cpp  pointlight.h  ray.cpp  ray.h  render.cpp  render.h  sampler.cpp  (+9 more)
black-diamond-engine.xcodeproj/: project.pbxproj
black-diamond-engine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
black-diamond-engine/black-diamond-math/: matrix4x4.cpp  matrix4x4.h  point.cpp  point.h  transform.cpp  transform.h  vector.cpp  vector.h
black-diamond-engine/black-diamond-math/black-diamond-math.xcodeproj/: project.pbxproj
black-diamond-engine/black-diamond-math/black-diamond-math.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
black-diamond-math/: matrix4x4.cpp  point.cpp  transform.h  vector.h
black-diamond-math/black-diamond-math.xcodeproj/: project.pbxproj
